# choreizo

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOFF.md  PLAN.md  README.md  WISHLIST.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
alembic/: env.py
alembic/versions/: 2026_04_24_2341-ef171a701513_initial_schema.py  2026_04_25_0000-b3c8d9e1f2a4_add_chore_allowed_weekdays.py  2026_04_25_0001-c4d5e6f7a8b9_add_chore_allowed_months.py  2026_04_25_0002-d5e6f7a8b9c0_add_chore_next_due_date.py  2026_04_25_0003-e6f7a8b9c0d1_add_assignment_snoozed_until.py
app/: __init__.py  assignments.py  auth.py  config.py  db.py  eligibility.py  escalation.py  invites.py  magic.py  main.py  models.py  notifications.py  scheduler.py  seed.py  stats.py
app/tg/: bot.py  escalation.py  notify.py
app/web/routes/: admin.py  admin_assignments.py  admin_eligibility.py  admin_reports.py  admin_settings.py  auth.py  invites.py  me.py
app/web/templates/: base.html  hello.html  login.html  me.html  me_chore_new.html  me_chores.html  me_settings.html
app/web/templates/admin/: assignments.html  chore_eligibility.html  chore_form.html  chores_list.html  history.html  invites_list.html  members_list.html  settings.html  stats.html
tests/: conftest.py  test_admin.py  test_assignments.py  test_eligibility.py  test_escalation.py  test_health.py  test_invites.py  test_models.py  test_notifications.py  test_reports.py
